Wed Dec 24 22:04:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/App_Code/unittest.asmx.cs:
        
          . Added username/password authentication to the webservice, which
            is sent as part of the SOAP header.
            
        * utils/BMW/website/App_Code/Service.asmx.cs:

          Removed this file.

Wed Dec 24 21:43:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/login.aspx.cs:

          Removed unused namespace imports.

Wed Dec 24 21:40:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:
        * utils/BMW/website/db/cutsbmw.db:

          . Added basic encryption support to the passwords. The next phase
            will encrypt the email addresses as well. This is just an extra
            security measure.

        * utils/BMW/website/login.aspx.cs:

          . Moved the authentication code into the CUTS.BMW assembly.

Wed Dec 24 20:34:31 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_bmw_assembly.mpb:
        * utils/BMW/assemblies/CUTS.Data/CUTS.Data.mpc:
        * utils/BMW/assemblies/CUTS.Web/CUTS.Web.mpc:

          . Base project that all BMW assemblies should derive from. This
            will make sure the assemblies are put in the correct location to
            build the BMW.

        * install/BMW.wxs:

          . Remove the hardcoded location of the SQLite.NET assembly.

        * utils/BMW/BMW.mwc:

          . Fixed compilation errors related to relating the CUTS
            MPC configuration files.

        * utils/BMW/assemblies/CUTS.BMW:
        * utils/BMW/assemblies/CUTS.BMW/CUTS:
        * utils/BMW/assemblies/CUTS.BMW/CUTS.BMW.mpc:
        * utils/BMW/assemblies/CUTS.BMW/CUTS.BMW.snk:
        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW:
        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs: